Fix CSV table overflow property

--- a/web/static/sass/partials/_base.sass
+++ b/web/static/sass/partials/_base.sass
@@ -3,6 +3,7 @@ $default-border: 1px solid $default-border-color
 
 @mixin reset
   border-radius: 0
+  overflow: visible
   > thead,
   > tbody
     > tr
